0024042: Performance improvements: Foundation Classes

Removed code under former __OPTIM_ARRAY macro